--- a/notebooks/day06.ipynb
+++ b/notebooks/day06.ipynb
@@ -359,62 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
-   "id": "cfc7a170-ad26-4e32-9e70-3ceb077b04c6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 percent done\n",
-      "0.09125752874612156 percent done\n",
-      "0.18251505749224312 percent done\n",
-      "0.27377258623836465 percent done\n",
-      "0.36503011498448623 percent done\n",
-      "0.45628764373060776 percent done\n",
-      "0.5475451724767293 percent done\n",
-      "0.6388027012228509 percent done\n",
-      "0.7300602299689725 percent done\n",
-      "0.821317758715094 percent done\n",
-      "0.9125752874612155 percent done\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1604"
-      ]
-     },
-     "execution_count": 697,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p2_list = []\n",
-    "for idx, coord in enumerate(coords):\n",
-    "    x_obs, y_obs = coord[0], coord[1]\n",
-    "    path_obs = lines.copy()\n",
-    "    path_obs[x_obs] = path_obs[x_obs][:y_obs] + '#' + path_obs[x_obs][y_obs+1:]\n",
-    "\n",
-    "    coords_tmp, patj_tmp = get_path(path_obs)\n",
-    "    if coords_tmp == -1:\n",
-    "        # print('loop!')\n",
-    "        p2_list.append((x_obs, y_obs))\n",
-    "\n",
-    "    if idx % 500 == 0:\n",
-    "        print(f'{idx/len(coords)} percent done')\n",
-    "p2 = len(set(p2_list))\n",
-    "p2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 703,
-   "id": "37154be2-e0f2-4918-8a4d-77fbdf47cce8",
+   "execution_count": 708,
+   "id": "780fdd07-5246-4f11-b235-260faa6352d1",
    "metadata": {},
    "outputs": [
     {
@@ -445,28 +391,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>49</td>\n",
+       "      <td>70</td>\n",
        "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>46</td>\n",
+       "      <td>69</td>\n",
        "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>32</td>\n",
        "      <td>68</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>32</td>\n",
-       "      <td>71</td>\n",
+       "      <td>67</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>49</td>\n",
-       "      <td>78</td>\n",
+       "      <td>66</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -474,59 +420,135 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1755</th>\n",
-       "      <td>120</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1756</th>\n",
-       "      <td>120</td>\n",
-       "      <td>121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1757</th>\n",
-       "      <td>123</td>\n",
+       "      <th>5474</th>\n",
+       "      <td>125</td>\n",
        "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1758</th>\n",
+       "      <th>5475</th>\n",
+       "      <td>126</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5476</th>\n",
        "      <td>127</td>\n",
        "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1759</th>\n",
+       "      <th>5477</th>\n",
+       "      <td>128</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5478</th>\n",
        "      <td>129</td>\n",
        "      <td>125</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1604 rows × 2 columns</p>\n",
+       "<p>4964 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        0    1\n",
-       "0      49   48\n",
-       "1      46   48\n",
-       "2      32   68\n",
-       "3      32   71\n",
-       "4      49   78\n",
+       "0      70   48\n",
+       "1      69   48\n",
+       "2      68   48\n",
+       "3      67   48\n",
+       "4      66   48\n",
        "...   ...  ...\n",
-       "1755  120  120\n",
-       "1756  120  121\n",
-       "1757  123  125\n",
-       "1758  127  125\n",
-       "1759  129  125\n",
+       "5474  125  125\n",
+       "5475  126  125\n",
+       "5476  127  125\n",
+       "5477  128  125\n",
+       "5478  129  125\n",
        "\n",
-       "[1604 rows x 2 columns]"
+       "[4964 rows x 2 columns]"
       ]
      },
-     "execution_count": 703,
+     "execution_count": 708,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(p2_list).drop_duplicates()"
+    "df_coords = pd.DataFrame(coords)[[0, 1]].drop_duplicates()\n",
+    "df_coords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 716,
+   "id": "cfc7a170-ad26-4e32-9e70-3ceb077b04c6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 percent done\n",
+      "0.09125752874612156 percent done\n",
+      "0.18251505749224312 percent done\n",
+      "0.27377258623836465 percent done\n",
+      "0.36503011498448623 percent done\n",
+      "0.45628764373060776 percent done\n",
+      "0.5475451724767293 percent done\n",
+      "0.6388027012228509 percent done\n",
+      "0.821317758715094 percent done\n",
+      "0.9125752874612155 percent done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1604"
+      ]
+     },
+     "execution_count": 716,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2_list = []\n",
+    "for idx, coord in df_coords.iterrows():\n",
+    "    # print(coord)\n",
+    "    x_obs, y_obs = coord[0], coord[1]\n",
+    "    path_obs = lines.copy()\n",
+    "    path_obs[x_obs] = path_obs[x_obs][:y_obs] + '#' + path_obs[x_obs][y_obs+1:]\n",
+    "\n",
+    "    coords_tmp, _ = get_path(path_obs)\n",
+    "    if coords_tmp == -1:\n",
+    "        # print('loop!')\n",
+    "        p2_list.append((x_obs, y_obs))\n",
+    "\n",
+    "    if idx % 500 == 0:\n",
+    "        print(f'{idx/len(coords)} percent done')\n",
+    "p2 = len(set(p2_list))\n",
+    "p2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 711,
+   "id": "37154be2-e0f2-4918-8a4d-77fbdf47cce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(70)"
+      ]
+     },
+     "execution_count": 711,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_coords.iloc[0][0]"
    ]
   }
  ],
