--- a/notebooks/day06.ipynb
+++ b/notebooks/day06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 2,
    "id": "d6517f0e-777c-4075-8e1c-6e5d135ab5eb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 3,
    "id": "8fc69467-1e14-454a-9965-7b2d64bb5186",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        " '...............................#......................................#.........#.............#......................#..........#.']"
       ]
      },
-     "execution_count": 686,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 4,
    "id": "cfc15d61-f120-4eb0-a6bd-18232b58874e",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "(71, 48)"
       ]
      },
-     "execution_count": 687,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 5,
    "id": "25c1d64b-c72b-4a0f-a93c-341b23acf8ae",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 6,
    "id": "71c9b0a2-7efd-4d61-ace8-9f7a86d21066",
    "metadata": {},
    "outputs": [],
@@ -225,19 +225,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 7,
    "id": "e0d8a5c0-dba1-42ed-a37d-6cb47aace98c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_out_bounds(x, y, path):\n",
-    "    return (x < 0 or x >= len(path)) or (y < 0 or y >= len(path[x]))\n",
+    "def check_out_bounds(x, y, max_x, max_y):\n",
+    "    return (x < 0 or x >= max_x) or (y < 0 or y >= max_y)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 8,
    "id": "ab481e37-1816-4870-9a00-ca37a0e57343",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 9,
    "id": "2653ac00-8f28-4281-8b59-edb77ad2d165",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 10,
    "id": "a0a30d6d-a5eb-4be4-b666-18d99205479e",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 20,
    "id": "0baa76de-be02-428a-88a6-b85ea855ee1e",
    "metadata": {
     "scrolled": true
@@ -286,12 +286,15 @@
     "    [x, y, direc, path] = get_inits(lines)\n",
     "    rotations = get_rotations()\n",
     "    direc = next(rotations)\n",
+    "    max_x = len(path)\n",
+    "    max_y = len(path[0])\n",
     "    coords = []\n",
     "    while True:\n",
-    "        path[x] = add_x(x, y, path)\n",
+    "        # p1 only\n",
+    "        # path[x] = add_x(x, y, path)\n",
     "        [x_try, y_try, direc] = get_new_coords(x, y, direc)\n",
     "\n",
-    "        if check_out_bounds(x_try, y_try, path):\n",
+    "        if check_out_bounds(x_try, y_try, max_x, max_y):\n",
     "            # print('out')\n",
     "            break;\n",
     "\n",
@@ -299,20 +302,24 @@
     "            # print('obstacle!')\n",
     "            direc = next(rotations)\n",
     "            [x_try, y_try, direc] = get_new_coords(x, y, direc)\n",
-    "\n",
-    "\n",
-    "        if [x_try, y_try, direc] in coords:\n",
-    "            return -1, path\n",
+    "         \n",
+    "            if lines[x_try][y_try] == '#':\n",
+    "                # print('obstacle!')\n",
+    "                direc = next(rotations)\n",
+    "                [x_try, y_try, direc] = get_new_coords(x, y, direc)\n",
+    "            \n",
+    "            if [x_try, y_try, direc] in coords:\n",
+    "                return 0\n",
     "\n",
     "        coords.append([x_try, y_try, direc])\n",
     "        [x, y] = [x_try, y_try]\n",
-    "    return coords, path\n",
+    "    return coords\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 21,
    "id": "765f1cab-87d5-4e86-b358-64ea47c9171f",
    "metadata": {},
    "outputs": [
@@ -322,20 +329,20 @@
        "5479"
       ]
      },
-     "execution_count": 695,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coords, path = get_path(lines)\n",
+    "coords = get_path(lines)\n",
     "len(coords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
-   "id": "73cba83a-cfd6-4239-8cd3-d417c20bfbfc",
+   "execution_count": 22,
+   "id": "780fdd07-5246-4f11-b235-260faa6352d1",
    "metadata": {},
    "outputs": [
     {
@@ -344,141 +351,20 @@
        "4964"
       ]
      },
-     "execution_count": 696,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p1 = 0\n",
-    "for line in path:\n",
-    "    xs = re.findall('x', line)\n",
-    "    p1 += len(xs)\n",
-    "p1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 708,
-   "id": "780fdd07-5246-4f11-b235-260faa6352d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>70</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>69</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>68</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>67</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>66</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5474</th>\n",
-       "      <td>125</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5475</th>\n",
-       "      <td>126</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5476</th>\n",
-       "      <td>127</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5477</th>\n",
-       "      <td>128</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5478</th>\n",
-       "      <td>129</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4964 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        0    1\n",
-       "0      70   48\n",
-       "1      69   48\n",
-       "2      68   48\n",
-       "3      67   48\n",
-       "4      66   48\n",
-       "...   ...  ...\n",
-       "5474  125  125\n",
-       "5475  126  125\n",
-       "5476  127  125\n",
-       "5477  128  125\n",
-       "5478  129  125\n",
-       "\n",
-       "[4964 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 708,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_coords = pd.DataFrame(coords)[[0, 1]].drop_duplicates()\n",
-    "df_coords"
+    "p1 = len(df_coords)\n",
+    "p1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 23,
    "id": "cfc7a170-ad26-4e32-9e70-3ceb077b04c6",
    "metadata": {
     "scrolled": true
@@ -503,10 +389,10 @@
     {
      "data": {
       "text/plain": [
-       "1604"
+       "1740"
       ]
      },
-     "execution_count": 716,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,8 +405,8 @@
     "    path_obs = lines.copy()\n",
     "    path_obs[x_obs] = path_obs[x_obs][:y_obs] + '#' + path_obs[x_obs][y_obs+1:]\n",
     "\n",
-    "    coords_tmp, _ = get_path(path_obs)\n",
-    "    if coords_tmp == -1:\n",
+    "    coords_tmp = get_path(path_obs)\n",
+    "    if not coords_tmp:\n",
     "        # print('loop!')\n",
     "        p2_list.append((x_obs, y_obs))\n",
     "\n",
