fixed toml; fixed day 15

--- a/notebooks/day14.ipynb
+++ b/notebooks/day14.ipynb
@@ -178,12 +178,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9e6f744d-f6fc-43ae-9f54-5b3eb18d6ee6",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m all_robot_poss \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n\u001b[0;32m----> 5\u001b[0m     all_robot_poss\u001b[38;5;241m.\u001b[39mappend(\u001b[43mget_final_pos\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(all_robot_poss)\u001b[38;5;241m==\u001b[39m\u001b[38;5;28mlen\u001b[39m(pd\u001b[38;5;241m.\u001b[39mDataFrame(all_robot_poss)\u001b[38;5;241m.\u001b[39mdrop_duplicates()):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(time)\n",
+      "Cell \u001b[0;32mIn[9], line 4\u001b[0m, in \u001b[0;36mget_final_pos\u001b[0;34m(robot, seconds)\u001b[0m\n\u001b[1;32m      2\u001b[0m pos, robot_vel \u001b[38;5;241m=\u001b[39m get_robot_params(robot)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(seconds):\n\u001b[0;32m----> 4\u001b[0m     new_pos \u001b[38;5;241m=\u001b[39m \u001b[43mmove_robot\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mpos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrobot_vel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     pos \u001b[38;5;241m=\u001b[39m new_pos\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pos\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Solved with some help from reddit\n",
     "for time in range(101*103):\n",
